# SchoolOS

./: docker-compose.yml  package-lock.json
backend/: alembic.ini  pyproject.toml
backend/app/: .env  main.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 8ab54ac20216_baseline_empty.py  916531a776c6_create_users_table.py
backend/app/models/: user.py
backend/app/routes/: auth.py  health.py  login.py
backend/schoolos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: axios.ts
frontend/src/pages/: Register.tsx
